[package]
name = "clitask"
version = "0.9.1"
authors = ["donflopez"]
description = "Run and handle webtasks"
repository = "https://github.com/donflopez/clitask"
homepage = "https://github.com/donflopez/clitask"
license = "MIT"

[dependencies]
clap = "2.32.0"
preferences = "1.1.0"
serde_derive = "0.9.6"
serde_json = "0.9.5"
serde = "0.9.6"
itertools = "0.10.3"
curl = "0.4.18"
scopeguard = "1.1.0"
